--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,17 @@
             <artifactId>spring-rabbit</artifactId>
             <version>1.5.6.RELEASE</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
